efishiery/logs/efishiery_nomor_satu/create_table/2022-09-04T00:00:00+00:00/4.log
[2022-09-05 11:10:17,111] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:10:17,172] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:10:17,173] {taskinstance.py:1042} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:10:17,173] {taskinstance.py:1043} INFO - Starting attempt 4 of 4
[2022-09-05 11:10:17,174] {taskinstance.py:1044} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:10:17,261] {taskinstance.py:1063} INFO - Executing <Task(PythonOperator): create_table> on 2022-09-04T00:00:00+00:00
[2022-09-05 11:10:17,276] {standard_task_runner.py:52} INFO - Started process 9969 to run task
[2022-09-05 11:10:17,282] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'efishiery_nomor_satu', 'create_table', '2022-09-04T00:00:00+00:00', '--job-id', '156', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/soal_nomor_satu.py', '--cfg-path', '/tmp/tmpyan8rl8y', '--error-file', '/tmp/tmpe4qxyhyi']
[2022-09-05 11:10:17,286] {standard_task_runner.py:77} INFO - Job 156: Subtask create_table
[2022-09-05 11:10:17,406] {logging_mixin.py:104} INFO - Running <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [running]> on host 2b8e628fc16c
[2022-09-05 11:10:17,501] {taskinstance.py:1257} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=farah
AIRFLOW_CTX_DAG_ID=efishiery_nomor_satu
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-04T00:00:00+00:00
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-04T00:00:00+00:00
[2022-09-05 11:10:17,518] {base.py:74} INFO - Using connection to: id: efishery. Host: 172.17.0.1, Port: 5432, Schema: efishery, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:10:17,560] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:10:17,624] {logging_mixin.py:104} INFO -      id  name
0  3923   Ani
1  3924  Budi
2  3925  Caca
[2022-09-05 11:10:17,625] {python.py:118} INFO - Done. Returned value was: None
[2022-09-05 11:10:17,696] {taskinstance.py:1166} INFO - Marking task as SUCCESS. dag_id=efishiery_nomor_satu, task_id=create_table, execution_date=20220904T000000, start_date=20220905T111017, end_date=20220905T111017
[2022-09-05 11:10:17,821] {taskinstance.py:1220} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2022-09-05 11:10:17,866] {local_task_job.py:146} INFO - Task exited with return code 0
[2022-09-05 11:32:04,536] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:32:04,581] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:32:04,582] {taskinstance.py:1042} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:32:04,582] {taskinstance.py:1043} INFO - Starting attempt 4 of 5
[2022-09-05 11:32:04,582] {taskinstance.py:1044} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:32:04,619] {taskinstance.py:1063} INFO - Executing <Task(PythonOperator): create_table> on 2022-09-04T00:00:00+00:00
[2022-09-05 11:32:04,625] {standard_task_runner.py:52} INFO - Started process 10626 to run task
[2022-09-05 11:32:04,632] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'efishiery_nomor_satu', 'create_table', '2022-09-04T00:00:00+00:00', '--job-id', '164', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/soal_nomor_satu.py', '--cfg-path', '/tmp/tmph6hqai0k', '--error-file', '/tmp/tmp8shp4b2u']
[2022-09-05 11:32:04,637] {standard_task_runner.py:77} INFO - Job 164: Subtask create_table
[2022-09-05 11:32:04,727] {logging_mixin.py:104} INFO - Running <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [running]> on host 2b8e628fc16c
[2022-09-05 11:32:04,792] {taskinstance.py:1257} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=farah
AIRFLOW_CTX_DAG_ID=efishiery_nomor_satu
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-04T00:00:00+00:00
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-04T00:00:00+00:00
[2022-09-05 11:32:04,815] {base.py:74} INFO - Using connection to: id: efishery. Host: 172.17.0.1, Port: 5432, Schema: efishery, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:32:04,859] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:32:04,884] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:32:04,895] {taskinstance.py:1455} ERROR - syntax error at or near "`"
LINE 1: INSERT INTO `dim_customer` (`id`,`name`) VALUES (3923,'Ani')
                    ^
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1112, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1285, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1315, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 117, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 128, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/usecase/soal_nomor_satu.py", line 9, in main
    insert_dwh_table(df)
  File "/opt/airflow/dags/usecase/soal_nomor_satu.py", line 53, in insert_dwh_table
    cursor.execute(sql, tuple(row))
psycopg2.errors.SyntaxError: syntax error at or near "`"
LINE 1: INSERT INTO `dim_customer` (`id`,`name`) VALUES (3923,'Ani')
                    ^

[2022-09-05 11:32:04,905] {taskinstance.py:1503} INFO - Marking task as UP_FOR_RETRY. dag_id=efishiery_nomor_satu, task_id=create_table, execution_date=20220904T000000, start_date=20220905T113204, end_date=20220905T113204
[2022-09-05 11:32:05,007] {local_task_job.py:146} INFO - Task exited with return code 1
